# localup

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD-CUSTOM.md  CLAUDE.md  Cargo.toml  DAEMON_IMPLEMENTATION_SUMMARY.md  DOCKER.md  Dockerfile  Dockerfile.prebuilt  HOMEBREW.md  Makefile  QUICK_START.md  README.md  RELAY-USAGE.md  _typos.toml  build.rs  docker-compose.yml  relays.example.yaml  relays.yaml
.github/: README.md  RELEASE.md
Formula/: README.md  localup-beta.rb  localup-head.rb  localup.rb
crates/localup-agent/: Cargo.toml  README.md
crates/localup-agent-server/: Cargo.toml
crates/localup-agent-server/src/: access_control.rs  lib.rs  main.rs  server.rs
crates/localup-agent/src/: agent.rs  allowlist.rs  connection.rs  forwarder.rs  lib.rs  main.rs
crates/localup-agent/tests/: jwt_validation_integration_test.rs
crates/localup-api/: Cargo.toml  README.md
crates/localup-api/src/: handlers.rs  lib.rs  models.rs
crates/localup-api/src/middleware/: auth.rs  mod.rs
crates/localup-api/tests/: auth_integration_test.rs
crates/localup-auth/: Cargo.toml
crates/localup-auth/examples/: custom_validators.rs  generate_token.rs  verify_reverse_tunnel_token.rs
crates/localup-auth/src/: jwt.rs  lib.rs  password.rs  token.rs  validator.rs
crates/localup-cert/: Cargo.toml
crates/localup-cert/src/: acme.rs  lib.rs  self_signed.rs
crates/localup-cert/tests/: pebble_acme_test.rs  zero_config_test.rs
crates/localup-cli/: Cargo.toml  build.rs
crates/localup-cli/src/: config.rs  daemon.rs  ipc.rs  lib.rs  localup_store.rs  main.rs  project_config.rs  service.rs
crates/localup-cli/tests/: daemon_tests.rs  integration_test.rs  integration_tests.rs  service_tests.rs
crates/localup-client/: Cargo.toml
crates/localup-client/examples/: reverse_tunnel_example.rs
crates/localup-client/src/: client.rs  config.rs  http_parser.rs  http_proxy.rs  lib.rs  localup.rs  metrics.rs  metrics_db.rs  metrics_server.rs  metrics_service.rs  relay_discovery.rs  reverse_tunnel.rs  transport_discovery.rs
crates/localup-client/tests/: agent_jwt_recovery_test.rs  disconnect_test.rs  sse_metrics_test.rs  transparent_tunnel_test.rs  transport_discovery_test.rs
crates/localup-connection/: Cargo.toml
crates/localup-connection/src/: connection.rs  lib.rs  reconnect.rs
crates/localup-control/: Cargo.toml
crates/localup-control/src/: agent_registry.rs  connection.rs  domain_provider.rs  handler.rs  lib.rs  pending_requests.rs  registry.rs  task_tracker.rs
crates/localup-control/tests/: disconnect_message_delivery_test.rs  subdomain_assignment_test.rs
crates/localup-exit-node/: Cargo.toml  build.rs
crates/localup-exit-node/src/: main.rs  orchestrator.rs
crates/localup-http-auth/: Cargo.toml
crates/localup-http-auth/src/: basic.rs  bearer.rs  header.rs  lib.rs
crates/localup-lib/: Cargo.toml  README.md
crates/localup-lib/src/: lib.rs  relay.rs  relay_config.rs
crates/localup-lib/tests/: acceptance_tests.rs  e2e_acceptance.rs  e2e_quic_tunnel.rs  sni_e2e_test.rs
crates/localup-proto/: Cargo.toml
crates/localup-proto/src/: codec.rs  discovery.rs  ip_filter.rs  lib.rs  messages.rs  mux.rs
crates/localup-router/: Cargo.toml
crates/localup-router/src/: http.rs  lib.rs  registry.rs  sni.rs  tcp.rs  wildcard.rs
crates/localup-router/tests/: sni_e2e_test.rs
crates/localup-server-https/: Cargo.toml
crates/localup-server-https/src/: lib.rs  server.rs
crates/localup-server-tcp/: Cargo.toml
crates/localup-server-tcp-proxy/: Cargo.toml
crates/localup-server-tcp-proxy/src/: lib.rs  server.rs
crates/localup-server-tcp/src/: server.rs
crates/localup-server-tls/: Cargo.toml
crates/localup-server-tls/src/: http_passthrough.rs  lib.rs  server.rs
crates/localup-transport/: Cargo.toml
crates/localup-transport-h2/: Cargo.toml
crates/localup-transport-h2/src/: config.rs  connection.rs  lib.rs  listener.rs  stream.rs
crates/localup-transport-quic/: Cargo.toml
crates/localup-transport-quic/src/: config.rs  connection.rs  lib.rs  listener.rs  stream.rs
crates/localup-transport-quic/tests/: config_zero_config.rs  integration.rs
crates/localup-transport-websocket/: Cargo.toml
crates/localup-transport-websocket/src/: config.rs  connection.rs  lib.rs  listener.rs  stream.rs
crates/localup-transport/src/: lib.rs  tests.rs
crates/tunnel-agent/: Cargo.toml  README.md
crates/tunnel-agent/src/: agent.rs  connection.rs  forwarder.rs  lib.rs  main.rs
crates/tunnel-agent/tests/: jwt_validation_integration_test.rs
crates/tunnel-api/: Cargo.toml  README.md
crates/tunnel-api/src/: handlers.rs  lib.rs  models.rs
crates/tunnel-cli/: Cargo.toml
crates/tunnel-cli/src/: daemon.rs  lib.rs  main.rs  tunnel_store.rs
crates/tunnel-cli/tests/: daemon_tests.rs  integration_test.rs  integration_tests.rs  service_tests.rs
crates/tunnel-client/: Cargo.toml  build.rs
crates/tunnel-client/examples/: reverse_tunnel_example.rs
crates/tunnel-client/src/: client.rs  config.rs  lib.rs  metrics.rs  metrics_db.rs  metrics_server.rs  metrics_service.rs  reverse_tunnel.rs  tunnel.rs
crates/tunnel-client/static/: dashboard.html
crates/tunnel-client/tests/: agent_jwt_recovery_test.rs  http_parse_test.rs  sse_metrics_test.rs  transparent_streaming_test.rs  transparent_tunnel_test.rs
crates/tunnel-control/: Cargo.toml
crates/tunnel-control/src/: agent_registry.rs  connection.rs  handler.rs  lib.rs  pending_requests.rs  registry.rs
crates/tunnel-control/tests/: subdomain_assignment_test.rs
crates/tunnel-exit-node/: Cargo.toml
crates/tunnel-exit-node/src/: lib.rs  main.rs
crates/tunnel-lib/: Cargo.toml  README.md
crates/tunnel-lib/src/: lib.rs
crates/tunnel-lib/tests/: e2e_quic_tunnel.rs
docs/: INSTALLATION.md  RELEASING.md  SNI_SUPPORT.md  custom-relay-config.md  daemon-mode.md  daemon.md  examples.md  homebrew-setup.md  relay-selection.md  testing-homebrew-tap.md
examples/: README.md  https_relay.rs  https_relay_custom_domain_provider.rs  https_relay_sticky_domains.rs  https_relay_with_subdomain_policy.rs  tcp_relay.rs  tls_relay.rs
(+255 files in other folders)
