[workspace]
members = [
    "crates/tunnel-proto",
    "crates/tunnel-client",
    "crates/tunnel-connection",
    "crates/tunnel-auth",
    "crates/tunnel-router",
    "crates/tunnel-server-tcp",
    "crates/tunnel-server-tcp-proxy",
    "crates/tunnel-server-tls",
    "crates/tunnel-server-https",
    "crates/tunnel-cert",
    "crates/tunnel-control",
    "crates/tunnel-exit-node",
    "crates/tunnel-cli",
    "crates/tunnel-lib",  # High-level public API for Rust applications
    "crates/tunnel-api",
    "crates/tunnel-relay-db",
    "crates/tunnel-transport",
    "crates/tunnel-transport-quic",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tunnel Team <team@tunnel.io>"]
repository = "https://github.com/tunnel/geo-tunnel"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Networking
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"

# QUIC
quinn = "0.11"

# TLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
webpki-roots = "0.26"

# ACME/Let's Encrypt
instant-acme = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Utilities
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9.2"
base64 = "0.21"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Testing
mockall = "0.12"

# Async utilities
async-trait = "0.1"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web framework and OpenAPI
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Database (SeaORM)
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono"] }
sea-orm-migration = "1.1"

# RFC 7807/9457 Problem Details
problem_details = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
