[package]
name = "localup-agent-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
localup-proto = { path = "../localup-proto" }
localup-transport = { path = "../localup-transport" }
localup-transport-quic = { path = "../localup-transport-quic" }
localup-agent = { path = "../localup-agent" }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# CLI
clap = { workspace = true, features = ["derive", "env"] }

# Utilities
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Network utilities
ipnet = "2.10"  # CIDR parsing

[build-dependencies]
chrono = { workspace = true }
