[package]
name = "localup-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "localup-agent"
path = "src/main.rs"

[dependencies]
tunnel-agent = { path = "../tunnel-agent" }
tunnel-proto = { path = "../tunnel-proto" }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
anyhow = { workspace = true }
uuid = { workspace = true }
