[package]
name = "localup-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Authentication
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }

# Utilities
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
