[package]
name = "localup-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
openapi = ["utoipa"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# OpenAPI (optional)
utoipa = { workspace = true, optional = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# System information
hostname = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
