[package]
name = "localup-router"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
localup-proto = { path = "../localup-proto" }

# Async runtime
tokio = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# Async utilities
async-trait = { workspace = true }

# Collections
dashmap = "6.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
