[package]
name = "localup-server-https"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
localup-proto = { path = "../localup-proto" }
localup-router = { path = "../localup-router" }
localup-cert = { path = "../localup-cert" }
localup-control = { path = "../localup-control" }
localup-transport = { path = "../localup-transport" }
localup-transport-quic = { path = "../localup-transport-quic" }
localup-relay-db = { path = "../localup-relay-db" }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
hyper = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
sea-orm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
