[package]
name = "localup-server-tls"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
localup-proto = { path = "../localup-proto" }
localup-router = { path = "../localup-router" }
localup-transport = { path = "../localup-transport" }
localup-cert = { path = "../localup-cert" }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
