[package]
name = "localup-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies
localup-proto = { path = "../localup-proto" }
localup-transport = { path = "../localup-transport" }
localup-cert = { path = "../localup-cert" }

# Async runtime
tokio = { workspace = true }

# QUIC
quinn = { workspace = true }

# TLS
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = { workspace = true }
rustls-pemfile = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
