[package]
name = "tunnel-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "localup-agent"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tunnel-proto = { path = "../tunnel-proto" }
tunnel-transport = { path = "../tunnel-transport" }
tunnel-transport-quic = { path = "../tunnel-transport-quic" }
tunnel-auth = { path = "../tunnel-auth" }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }

# External dependencies
ipnetwork = "0.20"
uuid = { version = "1.0", features = ["v4"] }
clap = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
