[package]
name = "tunnel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "localup"
path = "src/main.rs"

[dependencies]
tunnel-client = { path = "../tunnel-client" }
tunnel-proto = { path = "../tunnel-proto" }
tunnel-router = { path = "../tunnel-router" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
rustls = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
